--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -1,23 +1,93 @@
 /* main colors */
-/* top wrapper */
-/* line 9, ../sass/style.scss */
-#topwrapper {
-  background: #ffdc0d;
+/* line 7, ../sass/style.scss */
+body {
+  background-color: #ecf0f1;
 }
-/* line 12, ../sass/style.scss */
+
+/* top wrapper */
+/* line 13, ../sass/style.scss */
+#topwrapper {
+  background: #262626;
+}
+/* line 16, ../sass/style.scss */
 #topwrapper img {
   width: 170px;
   padding: 10px 5px;
-  margin-right: 70px;
+  margin-right: 75px;
 }
-/* line 18, ../sass/style.scss */
+/* line 22, ../sass/style.scss */
 #topwrapper h2 {
   display: inline-block;
   padding-left: 15px;
+  color: white;
+}
+
+/* forms */
+/* line 33, ../sass/style.scss */
+.box {
+  background-color: white;
+  border-top: 4px solid #ffe33b;
+  border-radius: 5px;
+  margin: 15px 0px;
+  padding-bottom: 10px;
+}
+/* line 41, ../sass/style.scss */
+.box .btn {
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 14px;
+  background: #262626;
+  padding: 8px 18px 8px 18px;
+  text-decoration: none;
+}
+/* line 53, ../sass/style.scss */
+.box .btn:hover {
+  background: #333333;
+  text-decoration: none;
+}
+/* line 59, ../sass/style.scss */
+.box .box-header {
+  border-bottom: 1px solid #e0e0e0;
+}
+/* line 61, ../sass/style.scss */
+.box .box-header h4 {
+  padding: 0px 10px;
+}
+/* line 66, ../sass/style.scss */
+.box form {
+  margin: 20px;
+}
+/* line 70, ../sass/style.scss */
+.box .badge {
+  background-color: #ffe33b;
+  color: black;
+}
+
+/* dashboard */
+/* line 78, ../sass/style.scss */
+.black-bg {
+  background-color: #262626;
+}
+
+/* line 82, ../sass/style.scss */
+.info-box i {
+  color: white;
+}
+
+/* line 87, ../sass/style.scss */
+.title h2 {
+  margin-top: 5px;
+}
+/* line 91, ../sass/style.scss */
+.title hr {
+  border-top: 1px solid #a6a6a6;
 }
 
 /* sidebar */
-/* line 25, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 #wrapper {
   padding-left: 0;
   -webkit-transition: all 0.5s ease;
@@ -26,12 +96,12 @@
   transition: all 0.5s ease;
 }
 
-/* line 33, ../sass/style.scss */
+/* line 107, ../sass/style.scss */
 #wrapper.toggled {
   padding-left: 250px;
 }
 
-/* line 37, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
@@ -47,26 +117,26 @@
   transition: all 0.5s ease;
 }
 
-/* line 53, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 #wrapper.toggled #sidebar-wrapper {
   width: 250px;
 }
 
-/* line 57, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 #page-content-wrapper {
   width: 100%;
   position: absolute;
   padding: 15px;
 }
 
-/* line 63, ../sass/style.scss */
+/* line 137, ../sass/style.scss */
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
   margin-right: -250px;
 }
 
 /* Sidebar Styles */
-/* line 70, ../sass/style.scss */
+/* line 144, ../sass/style.scss */
 .sidebar-nav {
   position: absolute;
   top: 0;
@@ -76,76 +146,92 @@
   list-style: none;
 }
 
-/* line 79, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
   border-left: 3px solid black;
 }
-/* line 84, ../sass/style.scss */
+/* line 158, ../sass/style.scss */
 .sidebar-nav li:hover {
-  border-left: 3px solid #ffdc0d;
+  border-left: 3px solid #262626;
 }
 
-/* line 90, ../sass/style.scss */
+/* line 164, ../sass/style.scss */
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  color: #000;
+  color: #000000;
 }
-/* line 95, ../sass/style.scss */
+/* line 169, ../sass/style.scss */
 .sidebar-nav li a i {
   padding-right: 10px;
 }
 
-/* line 102, ../sass/style.scss */
+/* line 176, ../sass/style.scss */
 .sidebar-nav li a:hover {
   text-decoration: none;
   color: #343434;
   background: rgba(255, 255, 255, 0.2);
 }
 
-/* line 108, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
-  /* line 115, ../sass/style.scss */
-  #wrapper {
-    padding-left: 250px;
-  }
-
-  /* line 119, ../sass/style.scss */
-  #wrapper.toggled {
-    padding-left: 0;
-  }
-
-  /* line 123, ../sass/style.scss */
-  #sidebar-wrapper {
-    width: 250px;
-  }
-
-  /* line 127, ../sass/style.scss */
-  #wrapper.toggled #sidebar-wrapper {
-    width: 0;
-  }
-
-  /* line 131, ../sass/style.scss */
-  #page-content-wrapper {
-    padding: 20px;
-    position: relative;
-  }
-
-  /* line 136, ../sass/style.scss */
-  #wrapper.toggled #page-content-wrapper {
-    position: relative;
-    margin-right: 0;
-  }
+/* line 189, ../sass/style.scss */
+#wrapper {
+  padding-left: 250px;
 }
-/* container */
-/* line 144, ../sass/style.scss */
-.container-fluid {
-  background-color: blue;
+
+/* line 193, ../sass/style.scss */
+#wrapper.toggled {
+  padding-left: 0;
+}
+
+/* line 197, ../sass/style.scss */
+#sidebar-wrapper {
+  width: 250px;
+}
+
+/* line 201, ../sass/style.scss */
+#wrapper.toggled #sidebar-wrapper {
+  width: 0;
+}
+
+/* line 205, ../sass/style.scss */
+#page-content-wrapper {
+  padding: 20px;
+  position: relative;
+}
+
+/* line 210, ../sass/style.scss */
+#wrapper.toggled #page-content-wrapper {
+  position: relative;
+  margin-right: 0;
+}
+
+/* bootstrap focus effect */
+/* line 217, ../sass/style.scss */
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+  border-color: #595959;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6);
+  outline: 0 none;
 }
