--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -1,29 +1,69 @@
 /* main colors */
-/* line 7, ../sass/style.scss */
+/* line 8, ../sass/style.scss */
 body {
   background-color: #ecf0f1;
+  font-family: 'Work Sans', sans-serif;
 }
 
-/* top wrapper */
 /* line 13, ../sass/style.scss */
-#topwrapper {
-  background: #262626;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Work Sans', sans-serif;
 }
-/* line 16, ../sass/style.scss */
-#topwrapper img {
-  width: 170px;
-  padding: 10px 5px;
-  margin-right: 75px;
+
+/* header */
+/* line 20, ../sass/style.scss */
+.main-header a, .main-header nav {
+  background-color: #1A2226 !important;
 }
-/* line 22, ../sass/style.scss */
-#topwrapper h2 {
-  display: inline-block;
-  padding-left: 15px;
+
+/* line 25, ../sass/style.scss */
+.skin-black .sidebar-menu > li.header {
+  color: black;
+  background: #ffe33b;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+/* borders weg */
+/* line 35, ../sass/style.scss */
+.skin-black .main-header > .navbar > .sidebar-toggle {
   color: white;
+  border-right: 0px;
+}
+
+/* line 40, ../sass/style.scss */
+.skin-black .main-header > .logo {
+  border-right: 0px;
+}
+
+/* overschrijving gele kleur */
+/* line 46, ../sass/style.scss */
+.bg-yellow {
+  background-color: #FFAB08 !important;
+}
+
+/* logo's */
+/* line 52, ../sass/style.scss */
+#small-logo, #large-logo {
+  height: 40px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+/* line 58, ../sass/style.scss */
+.logo-lg {
+  text-align: left;
+  color: white;
+}
+/* line 62, ../sass/style.scss */
+.logo-lg .text {
+  padding-left: 10px;
+  font-family: 'Work Sans', sans-serif;
 }
 
 /* forms */
-/* line 33, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -31,190 +71,64 @@ body {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 41, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
   border-radius: 5px;
-  font-family: Arial;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 400;
   color: #ffffff;
   font-size: 14px;
   background: #262626;
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 53, ../sass/style.scss */
+/* line 93, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 59, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 61, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 66, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 70, ../sass/style.scss */
+/* line 110, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 78, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 82, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 87, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 91, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
-/* sidebar */
-/* line 99, ../sass/style.scss */
-#wrapper {
-  padding-left: 0;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-/* line 107, ../sass/style.scss */
-#wrapper.toggled {
-  padding-left: 250px;
-}
-
-/* line 111, ../sass/style.scss */
-#sidebar-wrapper {
-  z-index: 1000;
-  position: fixed;
-  left: 250px;
-  width: 0;
-  height: 100%;
-  margin-left: -250px;
-  overflow-y: auto;
-  background-color: #ffe33b;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-/* line 127, ../sass/style.scss */
-#wrapper.toggled #sidebar-wrapper {
-  width: 250px;
-}
-
-/* line 131, ../sass/style.scss */
-#page-content-wrapper {
-  width: 100%;
-  position: absolute;
-  padding: 15px;
-}
-
-/* line 137, ../sass/style.scss */
-#wrapper.toggled #page-content-wrapper {
-  position: absolute;
-  margin-right: -250px;
-}
-
-/* Sidebar Styles */
-/* line 144, ../sass/style.scss */
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-/* line 153, ../sass/style.scss */
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-  border-left: 3px solid black;
-}
-/* line 158, ../sass/style.scss */
-.sidebar-nav li:hover {
-  border-left: 3px solid #262626;
-}
-
-/* line 164, ../sass/style.scss */
-.sidebar-nav li a {
-  display: block;
-  text-decoration: none;
-  color: #000000;
-}
-/* line 169, ../sass/style.scss */
-.sidebar-nav li a i {
-  padding-right: 10px;
-}
-
-/* line 176, ../sass/style.scss */
-.sidebar-nav li a:hover {
-  text-decoration: none;
-  color: #343434;
-  background: rgba(255, 255, 255, 0.2);
-}
-
-/* line 182, ../sass/style.scss */
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  text-decoration: none;
-}
-
-/* line 189, ../sass/style.scss */
-#wrapper {
-  padding-left: 250px;
-}
-
-/* line 193, ../sass/style.scss */
-#wrapper.toggled {
-  padding-left: 0;
-}
-
-/* line 197, ../sass/style.scss */
-#sidebar-wrapper {
-  width: 250px;
-}
-
-/* line 201, ../sass/style.scss */
-#wrapper.toggled #sidebar-wrapper {
-  width: 0;
-}
-
-/* line 205, ../sass/style.scss */
-#page-content-wrapper {
-  padding: 20px;
-  position: relative;
-}
-
-/* line 210, ../sass/style.scss */
-#wrapper.toggled #page-content-wrapper {
-  position: relative;
-  margin-right: 0;
-}
-
 /* bootstrap focus effect */
-/* line 217, ../sass/style.scss */
+/* line 139, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
