--- a/website/public/css/sass/style.scss
+++ b/website/public/css/sass/style.scss
@@ -14,6 +14,16 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Work Sans', sans-serif;
 }
 
+/*clean button */
+
+.button-clean {
+     background:none!important;
+     border:none; 
+     padding:0!important;
+     font: inherit;
+     cursor: pointer;
+}
+
 /* header */
 
 .main-header {
@@ -62,6 +72,49 @@ h1, h2, h3, h4, h5, h6 {
     .text {
         padding-left: 10px;
         font-family: 'Work Sans', sans-serif;
+    }
+}
+
+/* overzicht tafels */
+
+.info-box {
+    margin-bottom: 13px;
+}
+
+.subtitle-overzicht{
+    font-size: 14px;
+    font-weight: 300;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.button-plus {
+
+
+    span i {
+        transition:all 0.5s ease;
+        -webkit-transition:all 0.5s ease;
+        color: #747474;
+    }
+    
+    &:hover, &:focus {
+        span i {
+            color: white;
+        }
+
+    }
+}
+
+.info-box-empty {
+    margin-top: -100px;
+    
+    input:nth-child(1) {
+        margin-top: 9px;
+    }
+    
+    input:nth-child(2) {
+        margin-top: 4px;
     }
 }
 
