--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -1,17 +1,17 @@
 /* main colors */
-/* line 8, ../sass/style.scss */
+/* line 9, ../sass/style.scss */
 body {
   background-color: #ecf0f1;
   font-family: 'Work Sans', sans-serif;
 }
 
-/* line 13, ../sass/style.scss */
+/* line 14, ../sass/style.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Work Sans', sans-serif;
 }
 
 /*clean button */
-/* line 19, ../sass/style.scss */
+/* line 20, ../sass/style.scss */
 .button-clean {
   background: none !important;
   border: none;
@@ -21,12 +21,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* header */
-/* line 30, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
 .main-header a, .main-header nav {
   background-color: #1A2226 !important;
 }
 
-/* line 35, ../sass/style.scss */
+/* line 36, ../sass/style.scss */
 .skin-black .sidebar-menu > li.header {
   color: black;
   background: #ffe33b;
@@ -36,84 +36,86 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* borders weg */
-/* line 45, ../sass/style.scss */
+/* line 46, ../sass/style.scss */
 .skin-black .main-header > .navbar > .sidebar-toggle {
   color: white;
   border-right: 0px;
 }
 
-/* line 50, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 .skin-black .main-header > .logo {
   border-right: 0px;
 }
 
 /* overschrijving gele kleur */
-/* line 56, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
 .bg-yellow {
   background-color: #FFAB08 !important;
 }
 
 /* logo's */
-/* line 62, ../sass/style.scss */
+/* line 63, ../sass/style.scss */
 #small-logo, #large-logo {
   height: 40px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-/* line 68, ../sass/style.scss */
+/* line 69, ../sass/style.scss */
 .logo-lg {
   text-align: left;
   color: white;
 }
-/* line 72, ../sass/style.scss */
+/* line 73, ../sass/style.scss */
 .logo-lg .text {
   padding-left: 10px;
   font-family: 'Work Sans', sans-serif;
+  font-weight: 500;
 }
 
 /* overzicht tafels */
-/* line 80, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 .info-box {
   margin-bottom: 13px;
 }
 
-/* line 84, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 .subtitle-overzicht {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 87, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 .subtitle-overzicht:hover {
   cursor: pointer;
 }
 
-/* line 95, ../sass/style.scss */
+/* line 97, ../sass/style.scss */
 .button-plus span i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   color: #747474;
 }
-/* line 102, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 .button-plus:hover span i, .button-plus:focus span i {
   color: white;
 }
 
-/* line 109, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 .info-box-empty {
   margin-top: -100px;
 }
-/* line 112, ../sass/style.scss */
-.info-box-empty input:nth-child(1) {
+/* line 114, ../sass/style.scss */
+.info-box-empty input {
   margin-top: 9px;
 }
-/* line 116, ../sass/style.scss */
-.info-box-empty input:nth-child(2) {
+/* line 118, ../sass/style.scss */
+.info-box-empty select {
   margin-top: 4px;
+  margin-bottom: 0px;
 }
 
 /* forms */
-/* line 125, ../sass/style.scss */
+/* line 128, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -121,7 +123,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 133, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -134,51 +136,51 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 146, ../sass/style.scss */
+/* line 149, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 152, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 154, ../sass/style.scss */
+/* line 157, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 159, ../sass/style.scss */
+/* line 162, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 163, ../sass/style.scss */
+/* line 166, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 171, ../sass/style.scss */
+/* line 174, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 175, ../sass/style.scss */
+/* line 178, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 180, ../sass/style.scss */
+/* line 183, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 184, ../sass/style.scss */
+/* line 187, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
 /* bootstrap focus effect */
-/* line 192, ../sass/style.scss */
+/* line 195, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
