--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #747474;
   width: 50%;
   height: 50%;
-  overflow: auto;
+  overflow: hidden;
   margin: auto;
   position: absolute;
   top: 0;
@@ -347,4 +347,26 @@ input[type="color"]:focus,
   border-color: #595959;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6);
   outline: 0 none;
+}
+
+/* BUTTON */
+/* line 373, ../sass/style.scss */
+.custom-button {
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 14px;
+  background: #262626;
+  padding: 8px 18px 8px 18px;
+  text-decoration: none;
+}
+
+/* line 386, ../sass/style.scss */
+.custom-button:hover {
+  background: #333333;
+  text-decoration: none;
+  color: #ffffff;
 }
