--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -89,51 +89,71 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 130%;
 }
 
+/* line 92, ../sass/style.scss */
+.delete-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #dd4b39;
+  z-index: 1000;
+  padding-right: 4px;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+}
+/* line 102, ../sass/style.scss */
+.delete-button:hover, .delete-button:focus {
+  color: red;
+}
+/* line 106, ../sass/style.scss */
+.delete-button i {
+  font-size: 16px;
+}
+
 /* overzicht tafels advanced */
-/* line 94, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .nopadding {
   padding: 0 !important;
   margin: 0 !important;
 }
 
-/* line 99, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 #locationText {
   font-size: 0.8em;
 }
 
-/* line 105, ../sass/style.scss */
-#decorationModal .modal-footer-table {
+/* line 124, ../sass/style.scss */
+.modal .modal-footer-table {
   padding-top: 15px;
 }
-/* line 108, ../sass/style.scss */
-#decorationModal .modal-footer-table input, #decorationModal .modal-footer-table select {
+/* line 127, ../sass/style.scss */
+.modal .modal-footer-table input, .modal .modal-footer-table select {
   margin-bottom: 15px;
   width: 50%;
 }
-/* line 116, ../sass/style.scss */
-#decorationModal .choiseWindow .choise-block {
+/* line 135, ../sass/style.scss */
+.modal .choiseWindow .choise-block {
   position: relative;
   width: 80%;
   height: 0;
   padding-bottom: 80%;
   border-radius: 5px;
 }
-/* line 124, ../sass/style.scss */
-#decorationModal .choiseWindow .block-text {
+/* line 143, ../sass/style.scss */
+.modal .choiseWindow .block-text {
   margin-bottom: 15px;
 }
 
-/* line 132, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .dashboard-advanced {
   margin: 0px 15px 0px 15px;
 }
 
-/* line 136, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 .pointer {
   cursor: pointer !important;
 }
 
-/* line 139, ../sass/style.scss */
+/* line 158, ../sass/style.scss */
 .empty-block-advanced {
   position: relative;
   width: 100%;
@@ -144,16 +164,16 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transition: all 0.5s ease;
   opacity: 1;
 }
-/* line 151, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 .empty-block-advanced:hover, .empty-block-advanced:focus {
   opacity: 0.5;
   cursor: pointer;
 }
-/* line 155, ../sass/style.scss */
+/* line 174, ../sass/style.scss */
 .empty-block-advanced:hover .button-clean i, .empty-block-advanced:focus .button-clean i {
   color: white;
 }
-/* line 162, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 .empty-block-advanced .button-clean i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -170,35 +190,39 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
 }
 
-/* line 180, ../sass/style.scss */
+/* line 199, ../sass/style.scss */
 .filled-block-advanced {
   position: relative;
   width: 100%;
   height: 0;
   padding-bottom: 100%;
   background-color: #d2d6de;
+}
+
+/* line 209, ../sass/style.scss */
+.table-block-advanced {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
 }
-/* line 190, ../sass/style.scss */
-.filled-block-advanced:hover, .filled-block-advanced:focus {
+/* line 213, ../sass/style.scss */
+.table-block-advanced:hover, .table-block-advanced:focus {
   opacity: 0.8;
 }
 
 /* block achtergronden */
-/* line 199, ../sass/style.scss */
+/* line 222, ../sass/style.scss */
 .wood {
   background: #e5a76e;
   background-image: url("/images/wood.png");
 }
 
-/* line 204, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 .food {
   background: #a3b66c;
   background-image: url("/images/food.png");
 }
 
-/* line 209, ../sass/style.scss */
+/* line 232, ../sass/style.scss */
 .wall-horizontal {
   margin-top: 30%;
   margin-bottom: 30%;
@@ -206,14 +230,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 40% !important;
 }
 
-/* line 219, ../sass/style.scss */
+/* line 242, ../sass/style.scss */
 #decorationModal .wall-horizontal {
   margin-bottom: 20%;
   background-color: #37281b;
   padding-bottom: 40% !important;
 }
 
-/* line 227, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 .wall-vertical {
   width: 40% !important;
   margin: 0px auto;
@@ -221,48 +245,48 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* overzicht tafels  simple */
-/* line 235, ../sass/style.scss */
+/* line 258, ../sass/style.scss */
 .info-box {
   margin-bottom: 13px;
 }
 
-/* line 239, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 .subtitle-overzicht {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 242, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 .subtitle-overzicht:hover {
   cursor: pointer;
 }
 
-/* line 250, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
 .button-plus span i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   color: #747474;
 }
-/* line 257, ../sass/style.scss */
+/* line 280, ../sass/style.scss */
 .button-plus:hover span i, .button-plus:focus span i {
   color: white;
 }
 
-/* line 264, ../sass/style.scss */
+/* line 287, ../sass/style.scss */
 .info-box-empty {
   margin-top: -100px;
 }
-/* line 267, ../sass/style.scss */
+/* line 290, ../sass/style.scss */
 .info-box-empty input {
   margin-top: 9px;
 }
-/* line 271, ../sass/style.scss */
+/* line 294, ../sass/style.scss */
 .info-box-empty select {
   margin-top: 4px;
   margin-bottom: 0px;
 }
 
 /* forms */
-/* line 281, ../sass/style.scss */
+/* line 304, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -270,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 289, ../sass/style.scss */
+/* line 312, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -283,51 +307,51 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 302, ../sass/style.scss */
+/* line 325, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 308, ../sass/style.scss */
+/* line 331, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 310, ../sass/style.scss */
+/* line 333, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 315, ../sass/style.scss */
+/* line 338, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 319, ../sass/style.scss */
+/* line 342, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 327, ../sass/style.scss */
+/* line 350, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 331, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 336, ../sass/style.scss */
+/* line 359, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 340, ../sass/style.scss */
+/* line 363, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
 /* bootstrap focus effect */
-/* line 348, ../sass/style.scss */
+/* line 371, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -350,7 +374,7 @@ input[type="color"]:focus,
 }
 
 /* BUTTON */
-/* line 373, ../sass/style.scss */
+/* line 396, ../sass/style.scss */
 .custom-button {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -364,7 +388,7 @@ input[type="color"]:focus,
   text-decoration: none;
 }
 
-/* line 386, ../sass/style.scss */
+/* line 409, ../sass/style.scss */
 .custom-button:hover {
   background: #333333;
   text-decoration: none;
