--- a/website/public/css/sass/style.scss
+++ b/website/public/css/sass/style.scss
@@ -411,3 +411,7 @@ input[type="color"]:focus,
       text-decoration: none;
       color: #ffffff;
   }
+
+  .alert{
+    border-radius: 0px !important;
+  }
