--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -394,3 +394,8 @@ input[type="color"]:focus,
   text-decoration: none;
   color: #ffffff;
 }
+
+/* line 415, ../sass/style.scss */
+.alert {
+  border-radius: 0px !important;
+}
