--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -163,17 +163,18 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   opacity: 1;
+  border: 1px solid #d2d6de;
 }
-/* line 170, ../sass/style.scss */
+/* line 171, ../sass/style.scss */
 .empty-block-advanced:hover, .empty-block-advanced:focus {
   opacity: 0.5;
   cursor: pointer;
 }
-/* line 174, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 .empty-block-advanced:hover .button-clean i, .empty-block-advanced:focus .button-clean i {
   color: white;
 }
-/* line 181, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 .empty-block-advanced .button-clean i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -190,103 +191,104 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
 }
 
-/* line 199, ../sass/style.scss */
+/* line 200, ../sass/style.scss */
 .filled-block-advanced {
   position: relative;
   width: 100%;
   height: 0;
   padding-bottom: 100%;
   background-color: #d2d6de;
+  border: 1px solid #333;
 }
 
-/* line 209, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 .table-block-advanced {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
 }
-/* line 213, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 .table-block-advanced:hover, .table-block-advanced:focus {
   opacity: 0.8;
 }
 
 /* block achtergronden */
-/* line 222, ../sass/style.scss */
+/* line 225, ../sass/style.scss */
 .wood {
-  background: #e5a76e;
-  background-image: url("/images/wood.png");
+  background: #ffe33b;
 }
 
-/* line 227, ../sass/style.scss */
+/* line 229, ../sass/style.scss */
 .food {
   background: #a3b66c;
   background-image: url("/images/food.png");
+  border: 1px solid #a3b66c;
 }
 
-/* line 232, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 .wall-horizontal {
   margin-top: 30%;
   margin-bottom: 30%;
-  background-color: #37281b;
+  background-color: #333;
   padding-bottom: 40% !important;
 }
 
-/* line 242, ../sass/style.scss */
+/* line 245, ../sass/style.scss */
 #decorationModal .wall-horizontal {
   margin-bottom: 20%;
-  background-color: #37281b;
+  background-color: #333;
   padding-bottom: 40% !important;
 }
 
-/* line 250, ../sass/style.scss */
+/* line 253, ../sass/style.scss */
 .wall-vertical {
   width: 40% !important;
   margin: 0px auto;
-  background-color: #37281b;
+  background-color: #333;
 }
 
 /* overzicht tafels  simple */
-/* line 258, ../sass/style.scss */
+/* line 261, ../sass/style.scss */
 .info-box {
   margin-bottom: 13px;
 }
 
-/* line 262, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 .subtitle-overzicht {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 265, ../sass/style.scss */
+/* line 268, ../sass/style.scss */
 .subtitle-overzicht:hover {
   cursor: pointer;
 }
 
-/* line 273, ../sass/style.scss */
+/* line 276, ../sass/style.scss */
 .button-plus span i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   color: #747474;
 }
-/* line 280, ../sass/style.scss */
+/* line 283, ../sass/style.scss */
 .button-plus:hover span i, .button-plus:focus span i {
   color: white;
 }
 
-/* line 287, ../sass/style.scss */
+/* line 290, ../sass/style.scss */
 .info-box-empty {
   margin-top: -100px;
 }
-/* line 290, ../sass/style.scss */
+/* line 293, ../sass/style.scss */
 .info-box-empty input {
   margin-top: 9px;
 }
-/* line 294, ../sass/style.scss */
+/* line 297, ../sass/style.scss */
 .info-box-empty select {
   margin-top: 4px;
   margin-bottom: 0px;
 }
 
 /* forms */
-/* line 304, ../sass/style.scss */
+/* line 307, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -294,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 312, ../sass/style.scss */
+/* line 315, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -307,51 +309,51 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 325, ../sass/style.scss */
+/* line 328, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 331, ../sass/style.scss */
+/* line 334, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 333, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 338, ../sass/style.scss */
+/* line 341, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 342, ../sass/style.scss */
+/* line 345, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 350, ../sass/style.scss */
+/* line 353, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 354, ../sass/style.scss */
+/* line 357, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 359, ../sass/style.scss */
+/* line 362, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 363, ../sass/style.scss */
+/* line 366, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
 /* bootstrap focus effect */
-/* line 371, ../sass/style.scss */
+/* line 374, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -374,7 +376,7 @@ input[type="color"]:focus,
 }
 
 /* BUTTON */
-/* line 396, ../sass/style.scss */
+/* line 399, ../sass/style.scss */
 .custom-button {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -388,14 +390,14 @@ input[type="color"]:focus,
   text-decoration: none;
 }
 
-/* line 409, ../sass/style.scss */
+/* line 412, ../sass/style.scss */
 .custom-button:hover {
   background: #333333;
   text-decoration: none;
   color: #ffffff;
 }
 
-/* line 415, ../sass/style.scss */
+/* line 418, ../sass/style.scss */
 .alert {
   border-radius: 0px !important;
 }
