--- a/website/public/css/sass/style.scss
+++ b/website/public/css/sass/style.scss
@@ -223,7 +223,7 @@ h1, h2, h3, h4, h5, h6 {
 /* block achtergronden */ 
 
 .wood {
-  background: $yellow;
+  background-image: url('/images/wood.png');
 }
 
 .food {
