--- a/website/public/css/stylesheets/style.css
+++ b/website/public/css/stylesheets/style.css
@@ -83,13 +83,24 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 
+/* status overzicht */
+/* line 89, ../sass/style.scss */
+.green {
+  background-image: url("/images/wood-served.png") !important;
+}
+
+/* line 92, ../sass/style.scss */
+.red {
+  background-image: url("/images/wood-waiting.png") !important;
+}
+
 /* overzicht */
-/* line 88, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 .main-sidebar {
   min-height: 135%;
 }
 
-/* line 92, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .delete-button {
   position: absolute;
   top: 0;
@@ -100,37 +111,43 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
 }
-/* line 102, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .delete-button:hover, .delete-button:focus {
   color: red;
 }
-/* line 106, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .delete-button i {
   font-size: 16px;
 }
 
 /* overzicht tafels advanced */
-/* line 113, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
+.client-icon {
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+/* line 130, ../sass/style.scss */
 .nopadding {
   padding: 0 !important;
   margin: 0 !important;
 }
 
-/* line 118, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 #locationText {
   font-size: 0.8em;
 }
 
-/* line 124, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .modal .modal-footer-table {
   padding-top: 15px;
 }
-/* line 127, ../sass/style.scss */
+/* line 144, ../sass/style.scss */
 .modal .modal-footer-table input, .modal .modal-footer-table select {
   margin-bottom: 15px;
   width: 50%;
 }
-/* line 135, ../sass/style.scss */
+/* line 152, ../sass/style.scss */
 .modal .choiseWindow .choise-block {
   position: relative;
   width: 80%;
@@ -138,22 +155,22 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 80%;
   border-radius: 5px;
 }
-/* line 143, ../sass/style.scss */
+/* line 160, ../sass/style.scss */
 .modal .choiseWindow .block-text {
   margin-bottom: 15px;
 }
 
-/* line 151, ../sass/style.scss */
+/* line 168, ../sass/style.scss */
 .dashboard-advanced {
   margin: 0px 15px 0px 15px;
 }
 
-/* line 155, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 .pointer {
   cursor: pointer !important;
 }
 
-/* line 158, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 .empty-block-advanced {
   position: relative;
   width: 100%;
@@ -165,16 +182,16 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
   border: 1px solid #d2d6de;
 }
-/* line 171, ../sass/style.scss */
+/* line 188, ../sass/style.scss */
 .empty-block-advanced:hover, .empty-block-advanced:focus {
   opacity: 0.5;
   cursor: pointer;
 }
-/* line 175, ../sass/style.scss */
+/* line 192, ../sass/style.scss */
 .empty-block-advanced:hover .button-clean i, .empty-block-advanced:focus .button-clean i {
   color: white;
 }
-/* line 182, ../sass/style.scss */
+/* line 199, ../sass/style.scss */
 .empty-block-advanced .button-clean i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -191,7 +208,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
 }
 
-/* line 200, ../sass/style.scss */
+/* line 217, ../sass/style.scss */
 .filled-block-advanced {
   position: relative;
   width: 100%;
@@ -201,30 +218,35 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid #333;
 }
 
-/* line 212, ../sass/style.scss */
+/* line 229, ../sass/style.scss */
 .table-block-advanced {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
 }
-/* line 216, ../sass/style.scss */
+/* line 233, ../sass/style.scss */
 .table-block-advanced:hover, .table-block-advanced:focus {
   opacity: 0.8;
 }
 
+/* line 239, ../sass/style.scss */
+.nohovereffect:hover, .nohovereffect:focus {
+  opacity: 1;
+}
+
 /* block achtergronden */
-/* line 223, ../sass/style.scss */
+/* line 245, ../sass/style.scss */
 .wood {
   background-image: url("/images/wood.png");
 }
 
-/* line 227, ../sass/style.scss */
+/* line 249, ../sass/style.scss */
 .food {
   background: #a3b66c;
   background-image: url("/images/food.png");
   border: 1px solid #a3b66c;
 }
 
-/* line 233, ../sass/style.scss */
+/* line 255, ../sass/style.scss */
 .wall-horizontal {
   margin-top: 30%;
   margin-bottom: 30%;
@@ -232,14 +254,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 40% !important;
 }
 
-/* line 243, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 #decorationModal .wall-horizontal {
   margin-bottom: 20%;
   background-color: #333;
   padding-bottom: 40% !important;
 }
 
-/* line 251, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
 .wall-vertical {
   width: 40% !important;
   margin: 0px auto;
@@ -247,48 +269,48 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* overzicht tafels  simple */
-/* line 259, ../sass/style.scss */
+/* line 281, ../sass/style.scss */
 .info-box {
   margin-bottom: 13px;
 }
 
-/* line 263, ../sass/style.scss */
+/* line 285, ../sass/style.scss */
 .subtitle-overzicht {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 266, ../sass/style.scss */
+/* line 288, ../sass/style.scss */
 .subtitle-overzicht:hover {
   cursor: pointer;
 }
 
-/* line 274, ../sass/style.scss */
+/* line 296, ../sass/style.scss */
 .button-plus span i {
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   color: #747474;
 }
-/* line 281, ../sass/style.scss */
+/* line 303, ../sass/style.scss */
 .button-plus:hover span i, .button-plus:focus span i {
   color: white;
 }
 
-/* line 288, ../sass/style.scss */
+/* line 310, ../sass/style.scss */
 .info-box-empty {
   margin-top: -100px;
 }
-/* line 291, ../sass/style.scss */
+/* line 313, ../sass/style.scss */
 .info-box-empty input {
   margin-top: 9px;
 }
-/* line 295, ../sass/style.scss */
+/* line 317, ../sass/style.scss */
 .info-box-empty select {
   margin-top: 4px;
   margin-bottom: 0px;
 }
 
 /* forms */
-/* line 305, ../sass/style.scss */
+/* line 327, ../sass/style.scss */
 .box {
   background-color: white;
   border-top: 4px solid #ffe33b;
@@ -296,7 +318,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0px;
   padding-bottom: 10px;
 }
-/* line 313, ../sass/style.scss */
+/* line 335, ../sass/style.scss */
 .box .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -309,51 +331,51 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px 18px 8px 18px;
   text-decoration: none;
 }
-/* line 326, ../sass/style.scss */
+/* line 348, ../sass/style.scss */
 .box .btn:hover {
   background: #333333;
   text-decoration: none;
 }
-/* line 332, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 .box .box-header {
   border-bottom: 1px solid #e0e0e0;
 }
-/* line 334, ../sass/style.scss */
+/* line 356, ../sass/style.scss */
 .box .box-header h4 {
   padding: 0px 10px;
 }
-/* line 339, ../sass/style.scss */
+/* line 361, ../sass/style.scss */
 .box form {
   margin: 20px;
 }
-/* line 343, ../sass/style.scss */
+/* line 365, ../sass/style.scss */
 .box .badge {
   background-color: #ffe33b;
   color: black;
 }
 
 /* dashboard */
-/* line 351, ../sass/style.scss */
+/* line 373, ../sass/style.scss */
 .black-bg {
   background-color: #262626;
 }
 
-/* line 355, ../sass/style.scss */
+/* line 377, ../sass/style.scss */
 .info-box i {
   color: white;
 }
 
-/* line 360, ../sass/style.scss */
+/* line 382, ../sass/style.scss */
 .title h2 {
   margin-top: 5px;
 }
-/* line 364, ../sass/style.scss */
+/* line 386, ../sass/style.scss */
 .title hr {
   border-top: 1px solid #a6a6a6;
 }
 
 /* bootstrap focus effect */
-/* line 372, ../sass/style.scss */
+/* line 394, ../sass/style.scss */
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -376,7 +398,7 @@ input[type="color"]:focus,
 }
 
 /* BUTTON */
-/* line 397, ../sass/style.scss */
+/* line 419, ../sass/style.scss */
 .custom-button {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -390,14 +412,14 @@ input[type="color"]:focus,
   text-decoration: none;
 }
 
-/* line 410, ../sass/style.scss */
+/* line 432, ../sass/style.scss */
 .custom-button:hover {
   background: #333333;
   text-decoration: none;
   color: #ffffff;
 }
 
-/* line 416, ../sass/style.scss */
+/* line 438, ../sass/style.scss */
 .alert {
   border-radius: 0px !important;
 }
