--- a/website/public/css/sass/style.scss
+++ b/website/public/css/sass/style.scss
@@ -95,6 +95,9 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* overzicht */
+.bg-yellowdark {
+    background-color : $yellowDark;
+}
 
 .main-sidebar {
   min-height: 135%;
@@ -248,9 +251,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .food {
-  background: #a3b66c;
-  background-image: url("/images/food.png");
-  border: 1px solid #a3b66c;
+  background-color:white;
+background-image: linear-gradient(90deg, rgba(200,0,0,.5) 50%, transparent 50%),
+linear-gradient(rgba(200,0,0,.5) 50%, transparent 50%);
+background-size: 20px 20px;
+
 }
 
 .wall-horizontal {
@@ -278,6 +283,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* overzicht tafels  simple */
+
+.info-box-icon-btn { 
+    background : #d2d6de;
+}
 
 .info-box {
     margin-bottom: 13px;
@@ -333,24 +342,6 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 10px;
     //padding: 10px;
     
-    .btn {
-      -webkit-border-radius: 5;
-      -moz-border-radius: 5;
-      border-radius: 5px;
-      font-family: 'Work Sans', sans-serif;
-      font-weight: 400; 
-      color: #ffffff;
-      font-size: 14px;
-      background: $lightblack;
-      padding: 8px 18px 8px 18px;
-      text-decoration: none;
-    }
-
-    .btn:hover {
-      background: lighten($lightblack, 5);
-      text-decoration: none;
-    }
-
     
     .box-header {
         border-bottom: 1px solid #e0e0e0;
@@ -415,7 +406,8 @@ input[type="color"]:focus,
 
 
 
-/* BUTTON */
+/* BUTTONS */
+
 
   .custom-button {
       -webkit-border-radius: 5;
@@ -439,3 +431,45 @@ input[type="color"]:focus,
   .alert{
     border-radius: 0px !important;
   }
+  
+  
+  
+  /* footable */
+  
+ .table-planning-cell {
+     
+      &:hover{
+          background-color: darken(white, 5);
+          cursor: pointer;
+      }
+  }
+  
+  .footable > thead, .footable > thead > tr > th{
+	background-color: #FFE33B; 
+	background-image: none;
+
+}
+
+.footable {
+    border: none;
+    border-bottom : 1px solid #ccc;
+    font-family: 'Work Sans', sans-serif;
+    
+    td{
+        background-color: white;
+    }
+    
+    tbody{
+        border-right : 1px solid #ccc;
+    }
+}
+
+.footable > thead > tr > th {
+    border-left: none;
+    font-size: 16px;
+    text-shadow: none;
+}
+
+.select2-container .select2-selection--single {
+    height: 35px !important;
+}
